fix(ui): resolve SonarQube issues in AlternateViewTableModel
- Remove redundant TreeTableModel interface (already in superclass)
- Fix raw Class types to Class<?>
- Add @Override annotations to getColumnClass and isLeaf
- Reduce cognitive complexity by extracting helper methods
- Remove commented-out code blocks
- Use instanceof pattern matching