@@ -34,7 +34,7 @@ import javax.swing.SwingConstants;
 import javax.swing.table.DefaultTableCellRenderer;
 import javax.swing.table.TableColumnModel;
 
-public class AlternateViewTableModel extends AbstractTreeTableModel implements TreeTableModel {
+public class AlternateViewTableModel extends AbstractTreeTableModel {
     public static final int NAME = 0;
     public static final int PRCT = 1;
     public static final int LAST = 2;
@@ -43,7 +43,7 @@ public class AlternateViewTableModel extends AbstractTreeTableModel implements T
     public static final int NUMB = 5;
     public static final int SIZE = 6;
     protected static String[] cNames = {"Name", "%", "M", "Type", "Year", "Number", "Size"};
-    protected static Class[] cTypes = {
+    protected static Class<?>[] cTypes = {
         TreeTableModel.class, String.class, Character.class, Integer.class, Integer.class, Integer.class, String.class
     };
 
@@ -59,93 +59,77 @@ public class AlternateViewTableModel extends AbstractTreeTableModel implements T
         return cNames[c];
     }
 
-    public Class getColumnClass(int c) {
+    @Override
+    public Class<?> getColumnClass(int c) {
         return cTypes[c];
     }
 
     public Object getValueAt(Object node, int c) {
-        if (node instanceof AniDBEntity g) {
-            switch (c) {
-                case SIZE:
-                    return StringUtilities.sbyte(g.getTotalSize());
-                default:
-                    return null;
-            }
-        }
         if (node instanceof Anime a) {
-            switch (c) {
-                case NAME:
-                    return a.romajiTitle;
-                case TYPE:
-                    return a.type;
-                case YEAR:
-                    return Integer.valueOf(a.year);
-                case NUMB:
-                    return Integer.valueOf(a.size());
-                case PRCT:
-                    return Integer.valueOf(a.getCompletionPercent());
-                case LAST:
-                    return Character.valueOf(a.getMissingPattern());
-                default:
-                    return null;
-            }
+            return getAnimeValue(a, c);
         }
         if (node instanceof Episode e) {
-            switch (c) {
-                case NUMB:
-                    return Integer.valueOf(e.size());
-                default:
-                    return null;
-            }
+            return c == NUMB ? Integer.valueOf(e.size()) : null;
         }
         if (node instanceof AniDBFile f) {
-            switch (c) {
-                case TYPE:
-                    return f.getJob() == null ? null : f.getJob().getStatusText();
-                case YEAR:
-                    return f.videoCodec; // new Integer(f.fileId);
-                case NUMB:
-                    return f.audioCodec; // U.sbyte(f.totalSize);
-                default:
-                    return null;
-            }
+            return getFileValue(f, c);
         }
         if (node instanceof AnimeGroup g) {
-            switch (c) {
-                case NUMB:
-                    return Integer.valueOf(g.size());
-                case PRCT:
-                    return Integer.valueOf(g.getCompletionPercent());
-                default:
-                    return null;
-            }
+            return getAnimeGroupValue(g, c);
         }
         if (node instanceof Path p) {
-            switch (c) {
-                case NUMB:
-                    return Integer.valueOf(p.size());
-                // case PRCT: return new Integer(g.getCompletionPercent());
-                default:
-                    return null;
-            }
+            return c == NUMB ? Integer.valueOf(p.size()) : null;
         }
         if (node == AppContext.animeTreeRoot) {
-            switch (c) {
-                case NAME:
-                    return AppContext.animeTreeRoot.toString();
-                case NUMB:
-                    return Integer.valueOf(AppContext.animeTreeRoot.size());
-                default:
-                    return null;
-            }
+            return getRootValue(c);
+        }
+        if (node instanceof AniDBEntity g) {
+            return c == SIZE ? StringUtilities.sbyte(g.getTotalSize()) : null;
         }
         StringUtilities.err("AnimeModel: Unknown object: " + node);
         return null;
     }
 
+    private Object getAnimeValue(Anime a, int c) {
+        return switch (c) {
+            case NAME -> a.romajiTitle;
+            case TYPE -> a.type;
+            case YEAR -> Integer.valueOf(a.year);
+            case NUMB -> Integer.valueOf(a.size());
+            case PRCT -> Integer.valueOf(a.getCompletionPercent());
+            case LAST -> Character.valueOf(a.getMissingPattern());
+            default -> null;
+        };
+    }
+
+    private Object getFileValue(AniDBFile f, int c) {
+        return switch (c) {
+            case TYPE -> f.getJob() == null ? null : f.getJob().getStatusText();
+            case YEAR -> f.videoCodec;
+            case NUMB -> f.audioCodec;
+            default -> null;
+        };
+    }
+
+    private Object getAnimeGroupValue(AnimeGroup g, int c) {
+        return switch (c) {
+            case NUMB -> Integer.valueOf(g.size());
+            case PRCT -> Integer.valueOf(g.getCompletionPercent());
+            default -> null;
+        };
+    }
+
+    private Object getRootValue(int c) {
+        return switch (c) {
+            case NAME -> AppContext.animeTreeRoot.toString();
+            case NUMB -> Integer.valueOf(AppContext.animeTreeRoot.size());
+            default -> null;
+        };
+    }
+
     public Object getChild(Object parent, int index) {
-        if (parent instanceof AniDBEntity) {
-            return ((AniDBEntity) parent).get(index);
+        if (parent instanceof AniDBEntity entity) {
+            return entity.get(index);
         }
         StringUtilities.err(parent);
         return null;
@@ -158,6 +142,7 @@ public class AlternateViewTableModel extends AbstractTreeTableModel implements T
         return p.size();
     }
 
+    @Override
     public boolean isLeaf(Object node) {
         return node instanceof AniDBFile;
     }
@@ -172,7 +157,6 @@ public class AlternateViewTableModel extends AbstractTreeTableModel implements T
         m.getColumn(AlternateViewTableModel.LAST).setPreferredWidth(30);
         DefaultTableCellRenderer r0 = new DefaultTableCellRenderer();
         r0.setHorizontalAlignment(SwingConstants.CENTER);
-        // m.getColumn(AnimeModel.NAME).setCellRenderer(centerRend);
         m.getColumn(AlternateViewTableModel.TYPE).setCellRenderer(r0);
         m.getColumn(AlternateViewTableModel.YEAR).setCellRenderer(r0);
         m.getColumn(AlternateViewTableModel.NUMB).setCellRenderer(r0);
